# leptos-tauri

./: .gitignore  Cargo.toml  README.md  leptosfmt.toml  styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
